add github button to demo page

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <h2>JavaScript Library</h2>
 
     <input id='acc_id' type='number' placeholder='เบอร์โทรศัพท์ หรือ เลขบัตรปชช'><br>
-    <input id='amount' type='number' placeholder='จำนวนเงิน (ไม่ระบุก็ได้)' min='1'>
+    <input id='amount' type='number' placeholder='จำนวนเงิน (ไม่ระบุก็ได้)' min='1'><br>
     Generate QR-Code by <a target='_blank' href='https://davidshimjs.github.io/qrcodejs/'>https://davidshimjs.github.io/qrcodejs</a>
-    <br>
-    <br>
     <div id="qrcode"></div>
+
+    <!-- github button -->
+    <a class="github-button" href="https://github.com/diewland/promptpay-qr-js" data-size="large" aria-label="Star diewland/promptpay-qr-js on GitHub">Star</a>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 
     <script type="text/javascript">
       
